# toniebox

./: .env  .gitignore  README.md  audio.py  audio_playback.py  audio_player.py  buttons.py  find_pins.py  led.py  logger.py  main.py  menu.py  mkdocs.yml  model.py  models.py  oled.py  oled_menu.py  pyproject.toml  requirements.txt  rfid_reader.py  rfidaudio.py  setup.sh  start_player.sh  test_display.py  test_encoder.py  test_rfid.py
app/: audio_player.py  main.py  model.py  oled_menu.py  rfid_reader.py
