[project]
name = "toniebox"
version = "0.7.0"
description = "Toniebox project for Raspberry Pi"
requires-python = ">=3.9"

dependencies = [
    "pygame>=2.6.1",
    "mfrc522>=0.0.7",
    "sqlalchemy>=2.0.40",
    "gpiozero>=2.0.1",
    "luma.core>=2.4.2",
    "luma.oled>=3.14.0",
    "lgpio>=0.2.2.0"
]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]
